--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
-p {
-
+body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
-  
 }
 
-h1 {
-
-  font-style: bold;
+.header {
+  font-weight: bold;
   font-size: 17px;
+  margin-top: 0;
+}
 
+.Title {
+  font-weight: normal;
+  font-size: 15px;
+  margin: 1em 0;
+
+}
+
+.linkColor {
+  color: green;
 }
