--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
   margin-top: 0;
 }
 
-.Title {
+.title {
   font-weight: normal;
   font-size: 15px;
   margin: 1em 0;
 
 }
 
-.linkColor {
+.link-color {
   color: green;
 }
